--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                         <div class="certificate__container bd-grid">
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Programming in Java | Nptel - April 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS47S4446310402089099.jpg"></a></h3>
+                                <h3 class="certificate__title">Programming in Java | Nptel - April 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS29S3445074902212671.jpg"></a></h3>
                                 <p class="certificate__description">Learned about the concepts of OOPs using Java..</p>
                             </div>
 
@@ -282,7 +282,7 @@
                         <div class="certificate__container bd-grid">
                             <div class="certificate__content">
                                 <!-- <h3 class="certificate__title">Awards & Honours</h3> -->
-                                 <li class = "li_what_i_do" class="profile__description">Participated in Smart India Hackathon'22 Grand Finale on the idea of "Attendance management systems for Students of Government Aided Schools"</li>
+                                 <li class = "li_what_i_do" class="profile__description">Placed in Virtusa with a package of 5.5 LPA</li>
                              </div>
                             <!-- <div class="certificate__content">
                                 <h3 class="certificate__title">Leadership</h3>
