--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             <div>
                                 <ul style="list-style-type:disc">
                                     <li class = "li_what_i_do" class="profile__description">Participated in a workshop on Data analysis using Google Big Query and Ethical Hacking</li>
-                                    <li class = "li_what_i_do" class="profile__description">Created an Email Voice Assistant using AI as a Mini Project.</li>
+                                    <li class = "li_what_i_do" class="profile__description">Created Speech Emotion Recognition using various data sets as a Mini Project.</li>
 
                                 </ul>
                             </div>
