--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
                                 <h3 class="certificate__title">Leadership</h3>
                                 <li class = "li_what_i_do" class="profile__description">Leader of OWASP - Sathyabama Student Chapter<a class='section-title bx bx-link bx-tada' target="_blank" href="https://owasp.org/www-chapter-sathyabama-institute-of-science-and-technology/"></a></li>
                             </div> -->
+                            <div class="certificate__content">
+                                <!-- <h3 class="certificate__title">Awards & Honours</h3> -->
+                                 <li class = "li_what_i_do" class="profile__description">Won the title of Nurture Tek Knight through the "ReCogNurize 2.0"</li>
+                             </div>
                         </div>
                     </section>
                     <!--========== INTERESTS ==========-->
