--- a/index.html
+++ b/index.html
@@ -253,14 +253,15 @@
                             </div>
 
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Data Analytics with Python | Nptel - April 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS08S2452085702089099.jpg"></a></h3>
-                                <p class="certificate__description">Learned about data analytics using Python..</p>
+                                <h3 class="certificate__title">Spring Framework In Easy Steps | Udemy - May 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS08S2452085702089099.jpg"></a></h3>
+                                <p class="certificate__description">Learned basic spring framework in step by step easily.</p>
                             </div>
                             
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Discovering Computer Networks: Open Networking Lab | The Open University - April 2021 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://www.open.edu/openlearn/badges/badge.php?hash=8f3287f209aa38ab12920c8c8a11e2795cc6b150"></a></h3>
-                                <p class="certificate__description">Learned about setting up, configuring and troubleshooting simulated computer networks.</p>
+                                <h3 class="certificate__title">Learn Java Unit Testing with Junit & Mockito in 30 Steps | Udemy - June 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS08S2452085702089099.jpg"></a></h3>
+                                <p class="certificate__description">Learned basics of java unit testing with junit & mockito</p>
                             </div>
+                            
                         </div>
                     </section>
                     <!--========== What i do/did ==========-->
