--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
                             </div>
 
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Spring Framework In Easy Steps | Udemy - May 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS08S2452085702089099.jpg"></a></h3>
+                                <h3 class="certificate__title">Spring Framework In Easy Steps | Udemy - May 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://github.com/Zaid-Altaf/assets/blob/main/OPNL_1_statement.pdf"></a></h3>
                                 <p class="certificate__description">Learned basic spring framework in step by step easily.</p>
                             </div>
                             
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Learn Java Unit Testing with Junit & Mockito in 30 Steps | Udemy - June 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS08S2452085702089099.jpg"></a></h3>
+                                <h3 class="certificate__title">Learn Java Unit Testing with Junit & Mockito in 30 Steps | Udemy - June 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://github.com/Zaid-Altaf/assets/blob/main/OPNL_1_statement.pdf"></a></h3>
                                 <p class="certificate__description">Learned basics of java unit testing with junit & mockito</p>
                             </div>
                             
