--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                             </div>
 
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Spring Framework In Easy Steps | Udemy - May 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://github.com/Zaid-Altaf/assets/blob/main/OPNL_1_statement.pdf"></a></h3>
+                                <h3 class="certificate__title">Spring Framework In Easy Steps | Udemy - May 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://github.com/snehavijay23/assets/blob/main/spring%20framework%20certificate.pdf"></a></h3>
                                 <p class="certificate__description">Learned basic spring framework in step by step easily.</p>
                             </div>
                             
