--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             </div>
                             
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Learn Java Unit Testing with Junit & Mockito in 30 Steps | Udemy - June 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://github.com/Zaid-Altaf/assets/blob/main/OPNL_1_statement.pdf"></a></h3>
+                                <h3 class="certificate__title">Learn Java Unit Testing with Junit & Mockito in 30 Steps | Udemy - June 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://github.com/snehavijay23/assets/blob/main/JAVA%20UNITE%20TESTING.pdf"></a></h3>
                                 <p class="certificate__description">Learned basics of java unit testing with junit & mockito</p>
                             </div>
                             
