--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                         <div class="certificate__container bd-grid">
                             <div class="certificate__content">
-                                <h3 class="certificate__title">Programming in Java | Nptel - April 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS29S3445074902212671.jpg"></a></h3>
+                                <h3 class="certificate__title">Introduction to Machine Learning | Nptel - April 2022 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://archive.nptel.ac.in/noc/Ecertificate/?q=NPTEL22CS29S3445074902212671.jpg"></a></h3>
                                 <p class="certificate__description">Learned about the concepts of OOPs using Java..</p>
                             </div>
 
