--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
                                 <p class="certificate__description">Learned basics of java unit testing with junit & mockito</p>
                             </div>
                             
+                             <div class="certificate__content">
+                                <h3 class="certificate__title">Business English Certificate Preliminary | Cambridge University - May 2021 <a class='section-title bx bx-link bx-tada' target="_blank" href="https://github.com/snehavijay23/assets/blob/main/Bec%20certificate.pdf"></a></h3>
+                                <p class="certificate__description"> To assess my reading, writing, speaking and listening skills.</p>
+                            </div>
+                            
                         </div>
                     </section>
                     <!--========== What i do/did ==========-->
