--- a/index.html
+++ b/index.html
@@ -276,10 +276,22 @@
                             <div>
                                 <ul style="list-style-type:disc">
                                     <li class = "li_what_i_do" class="profile__description">Participated in a workshop on Data analysis using Google Big Query and Ethical Hacking</li>
-                                    <li class = "li_what_i_do" class="profile__description">Created Speech Emotion Recognition using various data sets as a Mini Project.</li>
-
                                 </ul>
                             </div>
+                        </div>
+                    </section>
+                    
+                    <section class="certificate section" id="certificates">
+                        <h2 class="section-title">PROJECTS</h2>
+                        <div class="certificate__container bd-grid">
+                            <div class="certificate__content">
+                                <!-- <h3 class="certificate__title">Awards & Honours</h3> -->
+                                 <li class = "li_what_i_do" class="profile__description">Created Speech Emotion Recognition using various data sets as a Mini Project.</li>
+                             </div>
+                            <!-- <div class="certificate__content">
+                                <h3 class="certificate__title">Leadership</h3>
+                                <li class = "li_what_i_do" class="profile__description">Leader of OWASP - Sathyabama Student Chapter<a class='section-title bx bx-link bx-tada' target="_blank" href="https://owasp.org/www-chapter-sathyabama-institute-of-science-and-technology/"></a></li>
+                            </div> -->
                         </div>
                     </section>
                     <!--========== ACHIEVEMENT ==========-->
