--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
                             <div>
                                 <ul style="list-style-type:disc">
                                     <li class = "li_what_i_do" class="profile__description">Participated in a workshop on Data analysis using Google Big Query and Ethical Hacking</li>
+                                    <li class = "li_what_i_do" class="profile__description">Participated in a workshop on Cyber Security</li>
                                 </ul>
                             </div>
                         </div>
