--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     </section>
                     
                     <section class="certificate section" id="certificates">
-                        <h2 class="section-title">PROJECTS</h2>
+                        <h2 class="section-title">MINI PROJECTS</h2>
                         <div class="certificate__container bd-grid">
                             <div class="certificate__content">
                                 <!-- <h3 class="certificate__title">Awards & Honours</h3> -->
